--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "weather-cli",
   "version": "1.0.0",
   "description": "CLI for getting weather",
-  "bin": "./index.js",
-  "main": "index.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "main": "weather.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node weather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
