--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "chalk": "^5.3.0",
-    "dedent": "^1.5.1"
+    "dedent": "^1.5.1",
+    "prompt-sync": "^4.2.0"
   }
 }
