--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.2",
     "chalk": "^5.3.0",
     "dedent": "^1.5.1",
+    "moment": "^2.29.4",
     "prompt-sync": "^4.2.0"
   }
 }
